--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="link-btn">
-                            <a href="http://www.17sucai.com/" class="theme-btn btn-style-one">Download CV</a>
+                            <a href="http://www.17sucai.com/" class="theme-btn btn-style-one">下载资源</a>
                         </div>
                         <ul class="social-icon-two">
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
