--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">我测你们码。</div>
+                                <div class="text">米奇不妙屋。</div>
                                 <div class="link-btn">
                                     <a href="#" class="theme-btn btn-style-one">Download CV</a>
                                     <a href="#" class="theme-btn btn-style-two">Hire Me</a>
