--- a/blog-single.html
+++ b/blog-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mahira | VCard | CV HTML Template</title>
+<title>Tisu</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="link-btn">
-                            <a href="#" class="theme-btn btn-style-one">Download CV</a>
+                            <a href="#" class="theme-btn btn-style-one">下载</a>
                         </div>
                         <ul class="social-icon-two">
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
