--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -128,8 +128,8 @@
                                 </div>
                                 <div class="text">米奇不妙屋。</div>
                                 <div class="link-btn">
-                                    <a href="#" class="theme-btn btn-style-one">Download CV</a>
-                                    <a href="#" class="theme-btn btn-style-two">Hire Me</a>
+                                    <a href="#" class="theme-btn btn-style-one">下载！</a>
+                                    <a href="#" class="theme-btn btn-style-two">干就完了！</a>
                                 </div>
                                 <ul class="social-icon-two">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
