--- a/index.html
+++ b/index.html
@@ -146,20 +146,20 @@
                         <!-- card item -->
                         <div class="card-about card-item" id="about" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
-                                <h4 class="title">About Me</h4>
-                                <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip commodo reprehenderit.</div>
+                                <h4 class="title">关于我</h4>
+                                <div class="text">一介凡人</div>
                                 <div class="info-list">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Name:</strong>  Tisu</li>
-                                                <li><strong>Phone:</strong>  254 - 2563 - 2154</li>
-                                                <li><strong>Address:</strong>  San francisco, USA</li>
+                                                <li><strong>Name:</strong>  一眼丁真</li>
+                                                <li><strong>Phone:</strong>  666 - 666 - 666</li>
+                                                <li><strong>Address:</strong>  世界最高城——理塘</li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Email:</strong>  mahirarashid@gmail.com</li>
+                                                <li><strong>Email:</strong>  shxu997@gmail.com</li>
                                                 <li><strong>Freelance:</strong>  Available</li>
                                             </ul>
                                         </div>
@@ -231,7 +231,7 @@
                                                 <div class="inner-box">
                                                     <h4>Web Design</h4>
                                                     <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="text">666</div>
                                                 </div>
                                             </div>
 
@@ -240,7 +240,7 @@
                                                 <div class="inner-box">
                                                     <h4>Web Development</h4>
                                                     <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="text">666 </div>
                                                 </div>
                                             </div>
 
@@ -249,7 +249,7 @@
                                                 <div class="inner-box">
                                                     <h4>Specialization Course</h4>
                                                     <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="text">666</div>
                                                 </div>
                                             </div>
                                             
@@ -265,24 +265,24 @@
                                             <div class="timeline-block">
                                                 <div class="inner-box">
                                                     <h4>Lead UI/UX Designer</h4>
-                                                    <div class="date"><span>2015-Present</span>  / Google inc.</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="date"><span>2015-Present</span>  / CCB inc.</div>
+                                                    <div class="text">666 </div>
                                                 </div>
                                             </div>
 
                                             <div class="timeline-block">
                                                 <div class="inner-box">
                                                     <h4>Senior UI/UX Designer</h4>
-                                                    <div class="date"><span>2012-2014 </span> / Facebook inc.</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="date"><span>2012-2014 </span> / CCB inc.</div>
+                                                    <div class="text">666 </div>
                                                 </div>
                                             </div>
 
                                             <div class="timeline-block">
                                                 <div class="inner-box">
                                                     <h4>Junior UI/UX Designer</h4>
-                                                    <div class="date"><span>2006-2011 </span>  / airbnb inc.</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="date"><span>2006-2011 </span>  / CCB inc.</div>
+                                                    <div class="text">666 </div>
                                                 </div>
                                             </div>
 
@@ -302,42 +302,42 @@
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-pen-tool"></span></div>
                                             <h4><a href="blog-single.html">UI/UX Design</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
+                                            <div class="text">666</div>
                                         </div> 
                                     </div>
                                     <div class="services-block col-md-6">
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-folder"></span></div>
                                             <h4><a href="blog-single.html">Web Design</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
+                                            <div class="text">666</div>
                                         </div> 
                                     </div>
                                     <div class="services-block col-md-6">
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-computer"></span></div>
                                             <h4><a href="blog-single.html">Branding</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
+                                            <div class="text">666</div>
                                         </div> 
                                     </div>
                                     <div class="services-block col-md-6">
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-layers-1"></span></div>
                                             <h4><a href="blog-single.html">Logo Design</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
+                                            <div class="text">666</div>
                                         </div> 
                                     </div>
                                     <div class="services-block col-md-6">
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-web-design"></span></div>
                                             <h4><a href="blog-single.html">Apps Design</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
+                                            <div class="text">666</div>
                                         </div> 
                                     </div>
                                     <div class="services-block col-md-6">
                                         <div class="inner-box">
                                             <div class="icon-box"><span class="icon flaticon-photo-camera"></span></div>
                                             <h4><a href="blog-single.html">Photography</a></h4>
-                                            <div class="text">Lorem ipsum dolor amet constur adipisicing elit </div>
+                                            <div class="text">666</div>
                                         </div> 
                                     </div>
                                 </div>
@@ -515,9 +515,9 @@
                                 <div class="row clearfix">
                                     <div class="col-md-6">
                                         <ul class="list-style-two">
-                                            <li><span class="icon flaticon-signs"></span>PO Box 16122 Collins Street <br> West Victoria 8007 Canada </li>
-                                            <li><span class="icon flaticon-smartphone"></span>(+48) 564-334-21-22-34 <br>(+48) 564-334-21-25</li>
-                                            <li><span class="icon flaticon-note-1"></span>info@cretox.com <br>info@example.com</li>
+                                            <li><span class="icon flaticon-signs"></span>世界最高城——理塘<br> 四川甘孜 </li>
+                                            <li><span class="icon flaticon-smartphone"></span>(+86) 666-666-66-66-66 </li>
+                                            <li><span class="icon flaticon-note-1"></span>shxu997@gmail.com </li>
                                         </ul>
                                     </div>
                                     <div class="col-md-6">
